set up email verification

--- a/findyy/appsettings.json
+++ b/findyy/appsettings.json
@@ -5,15 +5,26 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+
     "ConnectionStrings": {
-        //"dbcs": "server = H0RCRUX\\SQLEXPRESS; database = KrishiLink; trusted_connection = true; TrustServerCertificate=true",
-        "dbcs": "server = DESKTOP-LDC3OCG; database = freedyy; trusted_connection = true; TrustServerCertificate=true"
+        "dbcs": "Server=DESKTOP-LDC3OCG;Database=freedyy;Trusted_Connection=True;TrustServerCertificate=True"
     },
+
     "AllowedHosts": "*",
+
     "Jwt": {
-        "Key": "mvnXAXfmIxQiqDbZGGkunevT9pXobd!!",
+        "Key": "mvnXAXfmIxQiqDbZGGkunevT9pXobd!!", // secret key (keep safe)
         "Issuer": "JWTAuthDemo",
         "Audience": "JWTAuthDemoUser",
-        "ExpiryMinutes": 1440
-    }
+        "ExpiryMinutes": 1440 // 1 day
+    },
+
+    "Smtp": {
+        "Host": "smtp.gmail.com", // SMTP server (change if not Gmail)
+        "Port": "587", // TLS port
+        "User": "mitulgondaliya2002@gmail.com", // your SMTP username
+        "Pass": "kuti spjs ljid rldx" // app password or SMTP password
+    },
+
+    "AppUrl": "http://localhost:4200" // Angular frontend URL for redirects
 }
