added code into git

--- a/findyy/appsettings.json
+++ b/findyy/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
 
-  "ConnectionStrings": {
-    "dbcs": "Server=DESKTOP-86EIM10;Database=freedyy;Trusted_Connection=True;TrustServerCertificate=True"
-  },
+    "ConnectionStrings": {
+        "dbcs": "Server=DESKTOP-LDC3OCG;Database=freedyy;Trusted_Connection=True;TrustServerCertificate=True"
+    },
 
   "AllowedHosts": "*",
 
@@ -28,5 +28,5 @@
   },
 
   //"AppUrl": "http://localhost:4200" // Angular frontend URL for redirects
-  "AppUrl": "https://fantastic-giggle-pxgw7g9j65gcg54-4200.app.github.dev" // Angular frontend URL for redirects
+  "AppUrl": "https://sinister-goblin-pxgw7g9j4j637rjx-4200.app.github.dev" // Angular frontend URL for redirects
 }
