create business photot API

--- a/findyy/appsettings.json
+++ b/findyy/appsettings.json
@@ -27,6 +27,6 @@
     "Pass": "kuti spjs ljid rldx" // app password or SMTP password
   },
 
-  //"AppUrl": "http://localhost:4200" // Angular frontend URL for redirects
-  "AppUrl": "https://sinister-goblin-pxgw7g9j4j637rjx-4200.app.github.dev" // Angular frontend URL for redirects
+  "AppUrl": "http://localhost:4200" // Angular frontend URL for redirects
+  // "AppUrl": "https://sinister-goblin-pxgw7g9j4j637rjx-4200.app.github.dev" // Angular frontend URL for redirects
 }
